--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,7 +60,8 @@
       2,
       {
         "allow": [
-          "info"
+          "info",
+          "trace"
         ]
       }
     ],
@@ -85,6 +86,7 @@
     "require-jsdoc": 2,
     "semi": 2,
     "@typescript-eslint/explicit-function-return-type": 2,
+    "@typescript-eslint/prefer-nullish-coalescing": 0,
     "@typescript-eslint/no-dynamic-delete": 0,
     "@typescript-eslint/no-empty-interface": 2,
     "@typescript-eslint/no-explicit-any": 2,
