--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "cross-env NODE_ENV=development eslint . --ext .ts",
     "listErrors": "node_modules/.bin/tsc --skipLibCheck",
     "lintStaged": "npx lint-staged",
-    "test": "jest --coverage --config __tests__/jest.config.ts",
+    "test": "jest --runInBand --coverage --config __tests__/jest.config.ts",
     "test:watch": "jest --watch --config __tests__/jest.config.ts",
     "test:e2e": "jest --runInBand --config __tests__/jest.config.e2e.ts",
     "test:unit": "jest --config __tests__/jest.config.unit.ts",
@@ -37,7 +37,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "husky": "^8.0.3",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "node": "^18.7.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
