--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "jsonwebtoken": "^9.0.0",
     "node": "^18.7.0",
     "winston": "^3.8.2",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "ws": "^8.12.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.3.1",
@@ -51,6 +52,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.6.2",
     "@types/supertest": "^2.0.12",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "cross-env": "^7.0.3",
