--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": false,
   "scripts": {
     "start": "cross-env NODE_ENV=prod node build/src/main.js",
-    "dev": "cross-env NODE_ENV=dev nodemon build/src/main.js",
+    "start:dev": "cross-env NODE_ENV=dev TS_NODE_FILES=true TS_NODE_TRANSPILE_ONLY=true ts-node src/main.ts",
     "clean": "rimraf coverage build tmp",
     "prebuild": "npm run lint",
     "build": "tsc -p tsconfig.release.json",
@@ -45,6 +45,8 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.3.1",
+    "@swc/core": "^1.3.41",
+    "@swc/helpers": "^0.4.14",
     "@types/amqplib": "^0.10.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
