--- a/config/exampleConfig.json
+++ b/config/exampleConfig.json
@@ -2,5 +2,6 @@
   "amqpURI": "rabbitUrl",
   "corsOrigin": "*",
   "httpPort": 80,
-  "accessToken": "accessToken"
+  "accessToken": "accessToken",
+  "refToken": "refreshToken"
 }
