--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gateway",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Gateway",
   "productName": "Gateway",
   "author": "https://github.com/Virus288",
@@ -35,6 +35,8 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
     "husky": "^8.0.3",
     "jsonwebtoken": "^9.0.0",
     "node": "^19.8.1",
