--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lintStaged": "npx lint-staged",
     "test": "echo 'If you want to run all the tests, please use makefile'",
     "test:e2e": "cross-env NODE_ENV=test jest --runInBand --coverage --config __tests__/jest.config.e2e.ts",
+    "test:db": "cross-env NODE_ENV=test jest --runInBand --coverage --config __tests__/jest.config.db.ts",
     "test:unit": "cross-env NODE_ENV=test jest --coverage --config __tests__/jest.config.unit.ts",
     "prepare": "husky install"
   },
@@ -40,6 +41,8 @@
     "husky": "^8.0.3",
     "jsonwebtoken": "^9.0.0",
     "node": "^19.8.1",
+    "redis": "^4.6.6",
+    "redis-memory-server": "^0.6.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
     "winston": "^3.8.2",
