--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@jest/globals": "^29.3.1",
     "@swc/core": "^1.3.56",
     "@swc/helpers": "^0.5.1",
+    "@swc/jest": "^0.2.26",
     "@types/amqplib": "^0.10.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
