--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": false,
   "scripts": {
     "start": "cross-env NODE_ENV=prod node build/src/main.js",
-    "start:dev": "cross-env NODE_ENV=dev TS_NODE_FILES=true TS_NODE_TRANSPILE_ONLY=true nodemon build/src/main.js",
+    "start:dev": "concurrently 'npm run build:watch' 'cross-env NODE_ENV=dev TS_NODE_FILES=true TS_NODE_TRANSPILE_ONLY=true nodemon build/src/main.js'",
     "clean": "rimraf coverage build tmp",
     "prebuild": "npm run lint",
     "build": "tsc -p tsconfig.release.json",
@@ -31,29 +31,26 @@
     ]
   },
   "dependencies": {
-    "amqplib": "^0.10.3",
-    "chalk": "^4.1.2",
+    "amqplib": "0.10.3",
+    "chalk": "4.1.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-rate-limit": "^6.7.0",
-    "helmet": "^6.0.1",
+    "helmet": "^7.0.0",
     "husky": "^8.0.3",
-    "jsonwebtoken": "^9.0.0",
-    "node": "^19.8.1",
-    "redis": "^4.6.6",
+    "jsonwebtoken": "9.0.0",
+    "node": "20.2.0",
+    "redis": "4.6.6",
     "redis-memory-server": "^0.6.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1",
-    "ws": "^8.12.1"
+    "ws": "8.13.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.3.1",
-    "@swc/core": "^1.3.56",
-    "@swc/helpers": "^0.5.1",
-    "@swc/jest": "^0.2.26",
     "@types/amqplib": "^0.10.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
@@ -66,6 +63,7 @@
     "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
+    "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.5.0",
@@ -80,6 +78,6 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsutils": "^3.21.0",
-    "typescript": "^5.0.2"
+    "typescript": "5.0.4"
   }
 }
