--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lintStaged": "npx lint-staged",
     "test": "echo 'If you want to run all the tests, please use makefile'",
     "test:e2e": "cross-env NODE_ENV=test jest --runInBand --coverage --config __tests__/jest.config.e2e.ts",
-    "test:db": "cross-env NODE_ENV=test jest --runInBand --coverage --config __tests__/jest.config.db.ts",
+    "test:db": "cross-env NODE_ENV=test jest --coverage --config __tests__/jest.config.db.ts",
     "test:unit": "cross-env NODE_ENV=test jest --coverage --config __tests__/jest.config.unit.ts",
     "prepare": "husky install"
   },
