Feat: Added util for better communication between rabbit and requests, added mocSocket in tests, added mocks in rabbit, allowing to properly run e2e tests

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "listErrors": "node_modules/.bin/tsc --skipLibCheck",
     "lintStaged": "npx lint-staged",
     "test": "echo 'If you want to run all the tests, please use makefile'",
-    "test:e2e": "cross-env NODE_ENV=test jest --runInBand --coverage --config __tests__/jest.config.e2e.ts",
+    "test:e2e": "cross-env NODE_ENV=test jest --coverage --config __tests__/jest.config.e2e.ts",
     "test:db": "cross-env NODE_ENV=test jest --coverage --config __tests__/jest.config.db.ts",
     "test:unit": "cross-env NODE_ENV=test jest --coverage --config __tests__/jest.config.unit.ts",
     "prepare": "husky install"
@@ -37,8 +37,8 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
-    "husky": "^8.0.3",
     "jsonwebtoken": "9.0.0",
+    "moc-socket": "^0.1.2",
     "node": "20.2.0",
     "redis": "4.6.6",
     "swagger-jsdoc": "^6.2.8",
@@ -68,10 +68,10 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
-    "redis-memory-server": "^0.6.0",
     "supertest": "^6.2.4",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
