Fix: Removed npm test for make tests

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -49,7 +49,7 @@ jobs:
             ${{ runner.OS }}-node-
 
       - name: Run tests
-        run: npm run test
+        run: make test
 
   lint:
     runs-on: ubuntu-latest
@@ -70,7 +70,7 @@ jobs:
             ${{ runner.OS }}-node-
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Lint
         run: npm run lint
