--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -28,7 +28,7 @@ jobs:
             ${{ runner.OS }}-node-
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
   test:
     runs-on: ubuntu-latest
@@ -49,7 +49,7 @@ jobs:
             ${{ runner.OS }}-node-
 
       - name: Run tests
-        run: make test
+        run: yarn test:e2e && yarn test:unit && yarn test:db
 
   lint:
     runs-on: ubuntu-latest
@@ -68,9 +68,6 @@ jobs:
           key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.OS }}-node-
-
-      - name: Install dependencies
-        run: npm install
 
       - name: Lint
         run: npm run lint
@@ -94,9 +91,6 @@ jobs:
           key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.OS }}-node-
-
-      - name: Install dependencies
-        run: npm ci
 
       - name: Build
         run: npm run build
