--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -31,6 +31,7 @@ jobs:
         run: npm install
 
   test:
+    needs: [install]
     runs-on: ubuntu-latest
 
     container:
@@ -52,6 +53,7 @@ jobs:
         run: yarn test:e2e && yarn test:unit && yarn test:db
 
   lint:
+    needs: [install]
     runs-on: ubuntu-latest
 
     container:
