Fix: Added proper caching in actions

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -41,6 +41,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Cache node modules
         uses: actions/cache@v2
         with:
@@ -62,6 +65,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: npm install
 
       - name: Cache node modules
         uses: actions/cache@v2
@@ -85,6 +91,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: npm install
 
       - name: Cache node modules
         uses: actions/cache@v2
