Fix: Added missing data in exampleConfig.json

--- a/config/exampleConfig.json
+++ b/config/exampleConfig.json
@@ -1,8 +1,10 @@
 {
   "amqpURI": "rabbitUrl",
   "redisURI": "redisUrl",
+  "redisTestURI": "redisTestUrl",
   "corsOrigin": "*",
   "httpPort": 80,
+  "socketPort": 81,
   "accessToken": "accessToken",
   "refToken": "refreshToken"
 }
