--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -30,8 +30,34 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+  setup-config:
+    needs: install
+    runs-on: ubuntu-latest
+
+    container:
+      image: node:18-alpine
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup config files
+        run: |
+          mkdir -p config
+          echo '{
+            "amqpURI": "rabbitUrl",
+            "redisURI": "redisUrl",
+            "redisTestURI": "redisTestUrl",
+            "corsOrigin": "*",
+            "httpPort": 80,
+            "socketPort": 81,
+            "accessToken": "accessToken",
+            "refToken": "refreshToken"
+          }' > config/devConfig.json
+          cp config/devConfig.json config/prodConfig.json
+
   test:
-    needs: [install]
+    needs: [setup-config]
     runs-on: ubuntu-latest
 
     container:
@@ -56,7 +82,7 @@ jobs:
         run: yarn test:e2e && yarn test:unit && yarn test:db
 
   lint:
-    needs: [install]
+    needs: [setup-config]
     runs-on: ubuntu-latest
 
     container:
@@ -81,7 +107,7 @@ jobs:
         run: npm run lint
 
   build:
-    needs: [install, test, lint]
+    needs: [setup-config, test, lint]
 
     runs-on: ubuntu-latest
 
