--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "incremental": true,
     "inlineSources": true,
     "isolatedModules": true,
-    "moduleResolution": "node",
+    "moduleResolution": "NodeNext",
     "noEmit": false,
     "noEmitOnError": false,
     "noFallthroughCasesInSwitch": true,
