--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^5.57.0",
+    "@typescript-eslint/parser": "6.12.0",
     "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.37.0",
