--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:e2e": "cross-env NODE_ENV=test jest --coverage --config __tests__/jest.config.e2e.ts",
     "test:db": "cross-env NODE_ENV=test jest --coverage --config __tests__/jest.config.db.ts",
     "test:unit": "cross-env NODE_ENV=test jest --coverage --config __tests__/jest.config.unit.ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "migrate:latest": "cross-env NODE_ENV=dev npx knex --knexfile src/migrations/index.ts migrate:latest",
+    "migrate:rollback": "cross-env NODE_ENV=dev npx knex --knexfile src/migrations/index.ts migrate:latest"
   },
   "lint-staged": {
     "*.ts": [
@@ -38,7 +40,9 @@
     "express-rate-limit": "^7.1.4",
     "helmet": "^7.0.0",
     "jsonwebtoken": "9.0.2",
+    "knex": "^3.1.0",
     "moc-socket": "^0.1.2",
+    "mysql2": "^3.6.5",
     "node": "21.2.0",
     "redis": "4.6.11",
     "swagger-jsdoc": "^6.2.8",
