WIP Feat: Added oidc

--- a/config/exampleConfig.json
+++ b/config/exampleConfig.json
@@ -12,5 +12,9 @@
     "password": "mysqlPassword",
     "host": "host",
     "db": "db"
+  },
+  "session": {
+    "secret": "sessionSecret",
+    "secured": false
   }
 }
