--- a/package.json
+++ b/package.json
@@ -36,14 +36,18 @@
     "chalk": "4.1.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.1",
     "express-rate-limit": "^7.1.4",
+    "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "jsonwebtoken": "9.0.2",
     "knex": "^3.1.0",
     "moc-socket": "^0.1.2",
     "mysql2": "^3.6.5",
     "node": "21.2.0",
+    "node-jose": "^2.2.0",
+    "oidc-provider": "^6",
     "redis": "4.6.11",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
@@ -57,8 +61,11 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.10",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.11",
+    "@types/node-jose": "^1.1.13",
+    "@types/oidc-provider": "^8.4.3",
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
