--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "amqplib": "0.10.3",
+    "body-parser": "^1.20.2",
     "chalk": "4.1.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
