Feat: Cleaned middleware usage, added small changes for oidc client, properly bundled with Monsters-client project

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -324,6 +324,12 @@
     "@typescript-eslint/semi": [
       "error"
     ],
-    "@typescript-eslint/typedef": 2
+    "@typescript-eslint/typedef": 2,
+    "@typescript-eslint/unbound-method": [
+      2,
+      {
+        "ignoreStatic": true
+      }
+    ]
   }
 }
