Fix: Restricted depedency versions, automated building dockerImages, added small fixes related oidc

--- a/config/exampleConfig.json
+++ b/config/exampleConfig.json
@@ -3,6 +3,7 @@
   "redisURI": "redisUrl",
   "redisTestURI": "redisTestUrl",
   "corsOrigin": "*",
+  "myAddress": "urlOfThisService",
   "httpPort": 80,
   "socketPort": 81,
   "accessToken": "accessToken",
