Fix: Cleaned imports, unified reqHandler with corresponding modules

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "listErrors": "node_modules/.bin/tsc --skipLibCheck",
     "lintStaged": "npx lint-staged",
     "test": "echo 'If you want to run all the tests, please use makefile'",
-    "test:e2e": "cross-env NODE_ENV=test jest --coverage --config __tests__/jest.config.e2e.ts",
-    "test:db": "cross-env NODE_ENV=test jest --coverage --config __tests__/jest.config.db.ts",
-    "test:unit": "cross-env NODE_ENV=test jest --coverage --config __tests__/jest.config.unit.ts",
+    "test:e2e": "cross-env NODE_ENV=test jest --config __tests__/jest.config.e2e.ts",
+    "test:db": "cross-env NODE_ENV=test jest --config __tests__/jest.config.db.ts",
+    "test:unit": "cross-env NODE_ENV=test jest --config __tests__/jest.config.unit.ts",
     "prepare": "husky install",
     "migrate:latest": "npx knex --knexfile src/migrations/index.ts migrate:latest",
     "migrate:rollback": "npx knex --knexfile src/migrations/index.ts migrate:latest"
