Fix: Added fix for incorrect provider target in github ci/cd

--- a/config/exampleConfig.json
+++ b/config/exampleConfig.json
@@ -3,7 +3,7 @@
   "redisURI": "redisUrl",
   "redisTestURI": "redisTestUrl",
   "corsOrigin": "*",
-  "myAddress": "urlOfThisService",
+  "myAddress": "http://localhost",
   "httpPort": 80,
   "socketPort": 81,
   "accessToken": "accessToken",
