--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,15 +20,15 @@
   ],
   "extends": [
     "eslint-config-prettier",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
+    "plugin:prettier/recommended",
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:import/recommended",
-    "plugin:import/typescript",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:@typescript-eslint/strict",
-    "prettier",
-    "plugin:prettier/recommended"
+    "prettier"
   ],
   "settings": {
     "import/resolver": {
