--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -28,7 +28,7 @@ body:
       multiple: false
       label: Does this problem occurs while you are logged in ?
       options:
-        - "✨Yes"
+        - "Yes"
         - "No"
     validations:
       required: true
