--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "test:e2e": "cross-env NODE_ENV=test jest --config __tests__/jest.config.e2e.ts",
     "test:db": "cross-env NODE_ENV=test jest --config __tests__/jest.config.db.ts",
     "test:unit": "cross-env NODE_ENV=test jest --config __tests__/jest.config.unit.ts",
-    "preparee": "husky install",
-    "migrate:latest": "npx knex --knexfile src/migrations/index.ts migrate:latest",
-    "migrate:rollback": "npx knex --knexfile src/migrations/index.ts migrate:latest"
+    "prepare": "husky install",
+    "migrate:latest:prod": "npx knex --knexfile build/src/migrations/index.js migrate:latest",
+    "migrate:rollback:prod": "npx knex --knexfile build/src/migrations/index.js migrate:rollback",
+    "migrate:latest:dev": "npx knex --knexfile src/migrations/index.ts migrate:latest",
+    "migrate:rollback:dev": "npx knex --knexfile src/migrations/index.ts migrate:rollback"
   },
   "lint-staged": {
     "*.ts": [
