--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "test:db": "cross-env NODE_ENV=test jest --config __tests__/jest.config.db.ts",
     "test:unit": "cross-env NODE_ENV=test jest --config __tests__/jest.config.unit.ts",
     "prepare": "husky install",
-    "migrate:latest:prod": "npx knex --knexfile build/src/migrations/index.js migrate:latest",
-    "migrate:rollback:prod": "npx knex --knexfile build/src/migrations/index.js migrate:rollback",
-    "migrate:latest:dev": "npx knex --knexfile src/migrations/index.ts migrate:latest",
-    "migrate:rollback:dev": "npx knex --knexfile src/migrations/index.ts migrate:rollback"
+    "migrate:latest:prod": "cross-env NODE_ENV=production npx knex --knexfile build/src/migrations/index.js migrate:latest",
+    "migrate:rollback:prod": "cross-env NODE_ENV=production npx knex --knexfile build/src/migrations/index.js migrate:rollback",
+    "migrate:latest:dev": "cross-env NODE_ENV=dev npx knex --knexfile src/migrations/index.ts migrate:latest",
+    "migrate:rollback:dev": "cross-env NODE_ENV=dev npx knex --knexfile src/migrations/index.ts migrate:rollback"
   },
   "lint-staged": {
     "*.ts": [
