--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "test:db": "cross-env NODE_ENV=test jest --config __tests__/jest.config.db.ts",
     "test:unit": "cross-env NODE_ENV=test jest --config __tests__/jest.config.unit.ts",
     "prepare": "husky install",
-    "migrate:latest:prod": "cross-env NODE_ENV=production npx knex --knexfile build/src/migrations/index.js migrate:latest",
-    "migrate:rollback:prod": "cross-env NODE_ENV=production npx knex --knexfile build/src/migrations/index.js migrate:rollback",
+    "migrate:latest": "npx knex --knexfile build/src/migrations/index.js migrate:latest",
+    "migrate:rollback": "npx knex --knexfile build/src/migrations/index.js migrate:rollback",
     "migrate:latest:dev": "cross-env NODE_ENV=dev npx knex --knexfile src/migrations/index.ts migrate:latest",
     "migrate:rollback:dev": "cross-env NODE_ENV=dev npx knex --knexfile src/migrations/index.ts migrate:rollback"
   },
