--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "test:db": "cross-env NODE_ENV=test jest --config __tests__/jest.config.db.ts",
     "test:unit": "cross-env NODE_ENV=test jest --config __tests__/jest.config.unit.ts",
     "prepare": "husky install",
+    "migrate:init": "node build/src/migrations/init.js",
     "migrate:latest": "npx knex --knexfile build/src/migrations/index.js migrate:latest",
     "migrate:rollback": "npx knex --knexfile build/src/migrations/index.js migrate:rollback",
+    "migrate:init:dev": "cross-env NODE_ENV=dev ts-node src/migrations/init.ts",
     "migrate:latest:dev": "cross-env NODE_ENV=dev npx knex --knexfile src/migrations/index.ts migrate:latest",
     "migrate:rollback:dev": "cross-env NODE_ENV=dev npx knex --knexfile src/migrations/index.ts migrate:rollback"
   },
